--- a/index.html
+++ b/index.html
@@ -101,14 +101,98 @@ button:hover {
     <h1>Trickles</h1>
 
     <select id="model">
-      <option value="inclusionAI/Ling-1T">Ling-1T</option>
-      <option value="openai/whisper-large-v3">Whisper Large V3</option>
-      <option value="mlx-community/GLM-4.5-Air-4bit">GLM-4.5 Air 4bit</option>
-      <option value="mlx-community/Kimi-K2-Instruct-0905-mlx-DQ3_K_M">Kimi-K2</option>
-      <option value="zai-org/GLM-4.6">GLM-4.6</option>
-      <option value="openai/gpt-oss-120b">GPT-OSS-120B</option>
-      <option value="Kwaipilot/KAT-Dev">KAT-Dev</option>
-    </select>
+  <option value="meta-llama/Llama-2-13b-chat-hf">Llama-2-13b-chat-hf</option>
+  <option value="mlabonne/NeuralDaredevil-8B-abliterated">NeuralDaredevil-8B</option>
+  <option value="Sao10K/L3-70B-Euryale-v2.1">L3-70B-Euryale-v2.1</option>
+  <option value="SeaLLMs/SeaLLMs-v3-7B-Chat">SeaLLMs-v3-7B-Chat</option>
+  <option value="NousResearch/Hermes-3-Llama-3.1-8B">Hermes-3-Llama-3.1-8B</option>
+  <option value="Orenguteng/Llama-3.1-8B-Lexi-Uncensored-V2">Llama-3.1-8B-Lexi-Uncensored-V2</option>
+  <option value="zai-org/LongWriter-llama3.1-8b">LongWriter-llama3.1-8b</option>
+  <option value="Qwen/Qwen2.5-Math-1.5B">Qwen2.5-Math-1.5B</option>
+  <option value="Qwen/Qwen2.5-Coder-7B-Instruct">Qwen2.5-Coder-7B-Instruct</option>
+  <option value="CohereLabs/aya-expanse-8b">aya-expanse-8b</option>
+  <option value="aisingapore/Gemma-SEA-LION-v3-9B-IT">Gemma-SEA-LION-v3-9B-IT</option>
+  <option value="Qwen/Qwen2.5-Coder-32B">Qwen2.5-Coder-32B</option>
+  <option value="FallenMerick/MN-Violet-Lotus-12B">MN-Violet-Lotus-12B</option>
+  <option value="deepseek-ai/DeepSeek-R1-Distill-Qwen-7B">DeepSeek-R1-Distill-Qwen-7B</option>
+  <option value="huihui-ai/DeepSeek-R1-Distill-Qwen-14B-abliterated-v2">DeepSeek-R1-Distill-Qwen-14B</option>
+  <option value="nvidia/Llama-3.1-Nemotron-Nano-8B-v1">Llama-3.1-Nemotron-Nano-8B</option>
+  <option value="deepseek-ai/DeepSeek-V3-0324">DeepSeek-V3-0324</option>
+  <option value="DeepHat/DeepHat-V1-7B">DeepHat-V1-7B</option>
+  <option value="Qwen/Qwen3-30B-A3B">Qwen3-30B-A3B</option>
+  <option value="Goekdeniz-Guelmez/Josiefied-Qwen3-8B-abliterated-v1">Josiefied-Qwen3-8B</option>
+  <option value="microsoft/NextCoder-32B">NextCoder-32B</option>
+  <option value="Intelligent-Internet/II-Medical-8B">II-Medical-8B</option>
+  <option value="kyx0r/Neona-12B">Neona-12B</option>
+  <option value="fdtn-ai/Foundation-Sec-8B-Instruct">Foundation-Sec-8B-Instruct</option>
+  <option value="NousResearch/Hermes-4-70B">Hermes-4-70B</option>
+  <option value="CohereLabs/command-a-translate-08-2025">command-a-translate</option>
+  <option value="swiss-ai/Apertus-70B-Instruct-2509">Apertus-70B-Instruct</option>
+  <option value="lmsys/vicuna-13b-v1.5">vicuna-13b-v1.5</option>
+  <option value="Gryphe/MythoMax-L2-13b">MythoMax-L2-13b</option>
+  <option value="HuggingFaceH4/zephyr-7b-alpha">zephyr-7b-alpha</option>
+  <option value="DeepMount00/Mistral-Ita-7b">Mistral-Ita-7b</option>
+  <option value="ceadar-ie/FinanceConnect-13B">FinanceConnect-13B</option>
+  <option value="GritLM/GritLM-7B">GritLM-7B</option>
+  <option value="speakleash/Bielik-7B-Instruct-v0.1">Bielik-7B-Instruct</option>
+  <option value="meta-llama/Meta-Llama-3-70B">Meta-Llama-3-70B</option>
+  <option value="cgato/L3-TheSpice-8b-v0.1.3">L3-TheSpice-8b</option>
+  <option value="aaditya/Llama3-OpenBioLLM-8B">Llama3-OpenBioLLM-8B</option>
+  <option value="defog/llama-3-sqlcoder-8b">llama-3-sqlcoder-8b</option>
+  <option value="failspy/Meta-Llama-3-70B-Instruct-abliterated-v3.5">Meta-Llama-3-70B-Instruct</option>
+  <option value="yentinglin/Llama-3-Taiwan-70B-Instruct">Llama-3-Taiwan-70B-Instruct</option>
+  <option value="Qwen/Qwen2-7B-Instruct">Qwen2-7B-Instruct</option>
+  <option value="google/gemma-2-9b">gemma-2-9b</option>
+  <option value="Casual-Autopsy/L3-Umbral-Mind-RP-v3.0-8B">L3-Umbral-Mind-8B</option>
+  <option value="IlyaGusev/gemma-2-9b-it-abliterated">gemma-2-9b-it</option>
+  <option value="meta-llama/Llama-3.1-405B-Instruct">Llama-3.1-405B-Instruct</option>
+  <option value="MarinaraSpaghetti/NemoRemix-12B">NemoRemix-12B</option>
+  <option value="arcee-ai/Llama-3.1-SuperNova-Lite">Llama-3.1-SuperNova-Lite</option>
+  <option value="Qwen/Qwen2.5-72B-Instruct">Qwen2.5-72B-Instruct</option>
+  <option value="Qwen/Qwen2.5-Coder-7B">Qwen2.5-Coder-7B</option>
+  <option value="Qwen/Qwen2.5-32B-Instruct">Qwen2.5-32B-Instruct</option>
+  <option value="google/gemma-2-2b-jpn-it">gemma-2-2b-jpn-it</option>
+  <option value="arcee-ai/SuperNova-Medius">SuperNova-Medius</option>
+  <option value="huihui-ai/Qwen2.5-14B-Instruct-abliterated-v2">Qwen2.5-14B-Instruct</option>
+  <option value="Kortix/FastApply-7B-v1.0">FastApply-7B</option>
+  <option value="CohereLabs/aya-expanse-32b">aya-expanse-32b</option>
+  <option value="gajesh/llama-3-2-1b-instruct-eigentuned">llama-3-2-1b-instruct</option>
+  <option value="Qwen/Qwen2.5-Coder-32B-Instruct">Qwen2.5-Coder-32B-Instruct</option>
+  <option value="Nexusflow/Athene-V2-Chat">Athene-V2-Chat</option>
+  <option value="AstroMLab/AstroSage-8B">AstroSage-8B</option>
+  <option value="aisingapore/Llama-SEA-LION-v3-8B-IT">Llama-SEA-LION-v3-8B-IT</option>
+  <option value="Sao10K/70B-L3.3-Cirrus-x1">70B-L3.3-Cirrus-x1</option>
+  <option value="NovaSky-AI/Sky-T1-32B-Preview">Sky-T1-32B-Preview</option>
+  <option value="Steelskull/L3.3-MS-Nevoria-70b">L3.3-MS-Nevoria-70b</option>
+  <option value="deepseek-ai/DeepSeek-R1-Distill-Llama-70B">DeepSeek-R1-Distill-Llama-70B</option>
+  <option value="deepseek-ai/DeepSeek-R1-Distill-Qwen-14B">DeepSeek-R1-Distill-Qwen-14B</option>
+  <option value="bespokelabs/Bespoke-Stratos-7B">Bespoke-Stratos-7B</option>
+  <option value="huihui-ai/Mistral-Small-24B-Instruct-2501-abliterated">Mistral-Small-24B-Instruct</option>
+  <option value="OddTheGreat/Machina_24B.V2">Machina_24B</option>
+  <option value="PocketDoc/Dans-PersonalityEngine-V1.2.0-24b">Dans-PersonalityEngine-24b</option>
+  <option value="Xiaojian9992024/Qwen2.5-Dyanka-7B-Preview">Qwen2.5-Dyanka-7B</option>
+  <option value="yamatazen/EtherealAurora-12B">EtherealAurora-12B</option>
+  <option value="tokyotech-llm/Llama-3.3-Swallow-70B-Instruct-v0.4">Llama-3.3-Swallow-70B-Instruct</option>
+  <option value="DreadPoor/Irix-12B-Model_Stock">Irix-12B-Model</option>
+  <option value="all-hands/openhands-lm-32b-v0.1">openhands-lm-32b</option>
+  <option value="Salesforce/xLAM-2-32b-fc-r">xLAM-2-32b</option>
+  <option value="AI-MO/Kimina-Autoformalizer-7B">Kimina-Autoformalizer-7B</option>
+  <option value="facebook/KernelLLM">KernelLLM</option>
+  <option value="INSAIT-Institute/MamayLM-Gemma-2-9B-IT-v0.1">MamayLM-Gemma-2-9B</option>
+  <option value="Qwen/Qwen3-235B-A22B">Qwen3-235B</option>
+  <option value="Qwen/Qwen3-8B-Base">Qwen3-8B-Base</option>
+  <option value="mlabonne/Qwen3-8B-abliterated">Qwen3-8B-abliterated</option>
+  <option value="mlabonne/Qwen3-14B-abliterated">Qwen3-14B-abliterated</option>
+  <option value="marin-community/marin-8b-instruct">marin-8b-instruct</option>
+  <option value="soob3123/GrayLine-Qwen3-8B">GrayLine-Qwen3-8B</option>
+  <option value="nvidia/AceReason-Nemotron-14B">AceReason-Nemotron-14B</option>
+  <option value="Tongyi-Zhiwen/QwenLong-L1-32B">QwenLong-L1-32B</option>
+  <option value="open-thoughts/OpenThinker3-7B">OpenThinker3-7B</option>
+  <option value="MiniMaxAI/SynLogic-Mix-3-32B">SynLogic-Mix-3-32B</option>
+  <option value="MiniMaxAI/SynLogic-7B">SynLogic-7B</option>
+  <option value="Unbabel/Tower-Plus-2B">Tower-Plus-2B</option>
+</select>
+
 
     <textarea id="input" placeholder="Type your prompt here..."></textarea>
 
